--- a/Englisch.tex
+++ b/Englisch.tex
@@ -1,5 +1,8 @@
 \documentclass{article}
 \usepackage{tikz}
+\definecolor{darkbrown}{rgb}{0.36, 0.25, 0.20}
+\definecolor{mydarkgreen}{rgb}{0.0, 0.5, 0.0}
+\definecolor{strongyellow}{rgb}{1.0, 0.85, 0.1}
 \begin{document}
 
 \begin{tikzpicture}[scale=1]
@@ -26,188 +29,226 @@
   % Origin
   \node[below left] at (0,0) {0};
  % \draw (-0.12,-0.12) -- (0,0.12) -- (0.12,-0.12) -- cycle;
-  \draw (-0.12,2.82) -- (0,3.12) -- (0.12,2.82) -- cycle;
+  %\draw (-0.12,2.82) -- (0,3.12) -- (0.12,2.82) -- cycle;
 
 
 
   % (-1,0)
-
+  \fill[mydarkgreen, line width =1.5pt] (-3,0) circle (0.08cm);
   \draw [blue, line width=1.5pt] (-3.2, 1) -- (-2.8, 1); 
-  \fill[yellow] (-3,1) circle (0.08cm);
 
 
   \draw [blue, line width=1.5pt] (-2.2,1) -- (-2,1);
   \draw [blue, line width=1.5pt](-2, 1) -- (-2, 0.8);
-  \fill[brown] (-2,1) circle (0.08cm);
+  %fill[brown] (-2,1) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-2, 0.2) -- (-2,-0.2);
-  \fill[green] (-2,0) circle (0.08cm);
+  %fill[mydarkgreen] (-2,0) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-2, -0.8) -- (-2, -1);
   \draw [blue, line width=1.5pt] (-2.2, -1) -- (-2,-1);
-  \fill[brown] (-2,-1) circle (0.08cm);
+  %fill[brown] (-2,-1) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-3.2, -1) -- (-2.8, -1);
-  \fill[yellow] (-3,-1) circle (0.08cm);
+  %fill[yellow] (-3,-1) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-4,-1) -- (-3.8,-1);
   \draw [blue, line width=1.5pt] (-4, -1) -- (-4, -0.8);
-  \fill[brown] (-4,-1) circle (0.08cm);
+  %fill[brown] (-4,-1) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-4, -0.2) -- (-4, 0.2);
-  \fill[green] (-4,0) circle (0.08cm);
+  %fill[mydarkgreen] (-4,0) circle (0.08cm);
 
   \draw [blue, line width=1.5pt] (-4, 0.8) -- (-4, 1);
   \draw [blue, line width=1.5pt] (-4, 1) -- (-3.8, 1);
-  \fill[brown] (-4,1) circle (0.08cm);
+  %fill[brown] (-4,1) circle (0.08cm);
 
   %(0,0)
-\draw (0,0) circle (0.1cm);
+%\fill[black] (0,0) circle (0.1cm);
 \draw [blue, line width=1.5pt](-0.2, 1) -- (0.2,1);
+%fill[yellow] (0,1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (0.8,1) -- (1,1);
 \draw [blue, line width=1.5pt] (1, 1) -- (1, 0.8);
+%fill[brown] (1,1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (1, 0.2) -- (1,-0.2);
+%fill[mydarkgreen] (1,0) circle (0.08cm);
+
 
 \draw [blue, line width=1.5pt] (1, -0.8) -- (1, -1);
 \draw [blue, line width=1.5pt] (0.8, -1) -- (1, -1);
+%fill[brown] (1,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (-0.2, -1) -- (0.2, -1);
+%fill[yellow] (0,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (-1, -1) -- (-0.8, -1);
 \draw [blue, line width=1.5pt] (-1, -1) -- (-1, -0.8);
+%fill[brown] (-1,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (-1, -0.2) -- (-1, 0.2);
+%fill[mydarkgreen] (-1,0) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (-1, 0.8) -- (-1, 1);
 \draw [blue, line width=1.5pt] (-1, 1) -- (-0.8, 1);
+%fill[brown] (-1,1) circle (0.08cm);
 
 %(1,0)
-\draw [blue, line width=1.5pt] (3,0) circle (0.1cm);
+\fill [mydarkgreen, line width=1.5pt] (3,0) circle (0.1cm);
+
 \draw [blue, line width=1.5pt] (2.8,1) -- (3.2,1);
+%fill[yellow] (3,1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (3.8,1) -- (4,1);
 \draw [blue, line width=1.5pt] (4, 1) -- (4, 0.8);
+%fill[brown] (4,1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (4, 0.2) -- (4,-0.2);
+%fill[mydarkgreen] (4,0) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (4, -0.8) -- (4, -1);
 \draw [blue, line width=1.5pt] (3.8, -1) -- (4, -1);
+%fill[brown] (4,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (2.8, -1) -- (3.2, -1);
+%fill[yellow] (3,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt] (2, -1) -- (2.2, -1);
 \draw [blue, line width=1.5pt](2, -1) -- (2, -0.8);
+%fill[brown] (2,-1) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2, -0.2) -- (2, 0.2);
+%fill[mydarkgreen] (2,0) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2, 0.8) -- (2, 1);
 \draw [blue, line width=1.5pt](2, 1) -- (2.2, 1);
 
 %(-1,1)
-\fill (-3,3) circle (2pt);
+\fill[darkbrown] (-3,3) circle (0.1cm);
 \draw [blue, line width=1.5pt](-3.2, 4) -- (-2.8, 4); 
-\fill[yellow] (-3,4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-2.2, 4) -- (-2, 4);
 \draw [blue, line width=1.5pt](-2, 4) -- (-2, 3.8);
-\fill[brown] (-2,4) circle (0.08cm);
 
-\draw [blue, line width=1.5pt](-2, 3.2) -- (-2, 2.8);
-\fill[green] (-2,3) circle (0.06cm);
+\fill [blue, line width=1.5pt] (-2,3) circle (0.08cm);
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\draw [red, line width=1.5pt] (-2.23,3.1) -- (-2.23,2.9);
-\draw [red, line width=1.5pt] (-1.77,3.1)  -- (-1.77,2.9);
+\draw [red, line width=1.2pt] (-2.23,3.1) -- (-2.23,2.9);
+\draw [red, line width=1.2pt] (-1.77,3.1)  -- (-1.77,2.9);
+\draw [red, line width=1.2pt] (-2.1,2.7) -- (-1.9,2.7)
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
-
-
 
 
 
 \draw [blue, line width=1.5pt](-2, 2.2) -- (-2, 2);
 \draw [blue, line width=1.5pt](-2.2, 2) -- (-2, 2);
-\fill[brown] (-2,2) circle (0.08cm);
+%fill[brown] (-2,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-3.2, 2) -- (-2.8, 2);
-\fill[yellow] (-3,2) circle (0.08cm);
+%fill[yellow] (-3,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, 2) -- (-3.8, 2);
 \draw [blue, line width=1.5pt](-4, 2) -- (-4, 2.2);
-\fill[brown] (-4,2) circle (0.08cm);
+%fill[brown] (-4,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, 2.8) -- (-4, 3.2);
-\fill[green] (-4,3) circle (0.08cm);
+%fill[mydarkgreen] (-4,3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, 3.8) -- (-4, 4);
 \draw [blue, line width=1.5pt](-4, 4) -- (-3.8, 4);
-\fill[brown] (-4,4) circle (0.08cm);
+%fill[brown] (-4,4) circle (0.08cm);
 
 %(-1,-1)
-\fill (-3,-3) circle (2pt);
+\fill [darkbrown, line width=1.5pt] (-3,-3) circle (0.1cm);
+
 \draw [blue, line width=1.5pt](-3.2, -2) -- (-2.8, -2); 
+%fill[yellow] (-3,-2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-2.2, -2) -- (-2, -2);
 \draw [blue, line width=1.5pt](-2, -2) -- (-2, -2.2);
+%fill[brown] (-2,-2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-2, -2.8) -- (-2, -3.2);
+%fill[mydarkgreen] (-2,-3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-2, -3.8) -- (-2, -4);
 \draw [blue, line width=1.5pt](-2.2, -4) -- (-2, -4);
+%fill[brown] (-2,-4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-3.2, -4) -- (-2.8, -4);
+%fill[yellow] (-3,-4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, -4) -- (-3.8, -4);
 \draw [blue, line width=1.5pt](-4, -4) -- (-4, -3.8);
+%fill[brown] (-4,-4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, -3.2) -- (-4, -2.8);
+%fill[yellow] (-4,-3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-4, -2.2) -- (-4, -2);
 \draw [blue, line width=1.5pt](-4, -2) -- (-3.8, -2);
+%fill[brown] (-4,-2) circle (0.08cm);
 
 %(1,1)
+\fill [darkbrown, line width=1.5pt] (3,3) circle (0.1cm);
+
 \draw [blue, line width=1.5pt](2.8,4) -- (3.2,4);
+%fill[yellow] (3,4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](3.8,4) -- (4,4);
 \draw [blue, line width=1.5pt](4, 4) -- (4, 3.8);
+%fill[brown] (4,4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](4, 3.2) -- (4, 2.8);
+%fill[mydarkgreen] (4,3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](4, 2.2) -- (4, 2);
 \draw [blue, line width=1.5pt](3.8, 2) -- (4, 2);
+%fill[brown] (4,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2.8, 2) -- (3.2, 2);
+%fill[yellow] (3,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2, 2) -- (2.2, 2);
 \draw [blue, line width=1.5pt](2, 2) -- (2, 2.2);
+%fill[brown] (2,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2, 2.8) -- (2, 3.2);
+%fill[mydarkgreen] (2,3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](2, 3.8) -- (2, 4);
 \draw [blue, line width=1.5pt](2, 4) -- (2.2, 4);
+%fill[brown] (2,4) circle (0.08cm);
 
 %(0,1)
-%\draw [blue, line width=1.5pt](0,3) circle (0.1cm);
+\fill [strongyellow, line width=1.5pt](0,3) circle (0.1cm);
+
 \draw [blue, line width=1.5pt](-0.2, 4) -- (0.2, 4);
+%fill[yellow] (0,4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](0.8, 4) -- (1, 4);
 \draw [blue, line width=1.5pt](1, 4) -- (1, 3.8);
+%fill[brown] (1,4) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](1, 3.2) -- (1, 2.8);
+%fill[mydarkgreen] (1,3) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](1, 2.2) -- (1, 2);
 \draw [blue, line width=1.5pt](0.8, 2) -- (1, 2);
+%fill[brown] (1,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-0.2, 2) -- (0.2, 2);
+%fill[yellow] (0,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-1, 2) -- (-0.8, 2);
 \draw [blue, line width=1.5pt](-1, 2) -- (-1, 2.2);
+%fill[brown] (-1,2) circle (0.08cm);
 
 \draw [blue, line width=1.5pt](-1, 2.8) -- (-1, 3.2);
+%fill[mydarkgreen] (-1,3) circle (0.08cm);
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \draw [orange, line width=1.5pt] (-1.23, 3.1) -- (-1.23, 2.9);
@@ -218,9 +259,10 @@
 
 \draw [blue, line width=1.5pt](-1, 3.8) -- (-1, 4);
 \draw [blue, line width=1.5pt](-1, 4) -- (-0.8, 4);
+%\fill[brown] (-1,4) circle (0.08cm);
 
 %(0,-1)
-\draw [blue, line width=1.5pt](0,-3) circle (0.1cm);
+\fill [strongyellow, line width=1.5pt](0,-3) circle (0.1cm);
 \draw [blue, line width=1.5pt](-0.2, -2) -- (0.2, -2);
 
 \draw [blue, line width=1.5pt](0.8, -2) -- (1, -2);
@@ -242,7 +284,7 @@
 \draw [blue, line width=1.5pt](-1, -2) -- (-0.8, -2);
 
 %(1,-1)
-\draw[brown] (3,-3)circle (0.1cm);
+\fill[darkbrown, line width =1.5pt] (3,-3)circle (0.1cm);
 \draw [blue, line width=1.5pt](2.8, -2) -- (3.2, -2);
 
 \draw [blue, line width=1.5pt](3.8, -2) -- (4, -2);
